{
    "name": "DebugControls",
    "maps": [
        {
            "name": "DebugActionMap",
            "id": "621d39f2-e717-4f49-8f45-121fe91ab8dc",
            "actions": [
                {
                    "name": "Idle",
                    "type": "Button",
                    "id": "1a9e31a8-1f8c-4ef0-a234-baf5fb2ba209",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "2247b9de-fba5-4307-87de-7d831d4d2eb8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "fed5801f-452b-4a3c-8a7a-2659b25da256",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AttackF",
                    "type": "Button",
                    "id": "5de1f5a6-7c35-45e7-a952-97cbeefcaf14",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AttackB",
                    "type": "Button",
                    "id": "61b8f7f1-c9e0-4748-9543-16e89c02daa6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hurt",
                    "type": "Button",
                    "id": "4fbd1e56-e607-4d21-bac0-a027b1da4a0f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Win",
                    "type": "Button",
                    "id": "6896686e-5e3c-4c52-ac55-c13d4af9a6b5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lose",
                    "type": "Button",
                    "id": "2f977375-d861-4a8a-9a72-3e3a193e88d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "66da4e7e-fdc4-4d7d-8d40-667f69b6a620",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Idle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8549f5dd-e3f4-4cf8-ab91-b94b63ecc480",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9dd6d41-a5ac-4c34-8a67-a45b674dddb0",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hurt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b44b1c3-2128-4348-a177-890aaba4cea9",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Win",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97dcd601-5213-4ecb-b79b-84f962ab6713",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lose",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "974c15cb-fe18-40db-91c2-2c5e718ac26b",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d1cbdf1-60cf-4aa6-a045-d13614c845b6",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackF",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb05cff1-65b0-4083-9eb8-527201c3dfb3",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackB",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}